--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 .block_teaching_team .user_profile {
     margin-bottom: 10px;
     overflow: hidden;
-    background: #efefef;
+    background: #fbfbfb;
+    border-right: 2px solid #ededed;
 }
 
 .block_teaching_team .user_profile:last-child {
