--- a/styles.css
+++ b/styles.css
@@ -45,3 +45,33 @@
 .block_teaching_team .user_profile .user_details .detail.email a {
     color: #2f2f2f;
 }
+
+/* Temp fix until converted to plugin */
+#page-blocks-teaching_team-course #region-main .card-block {
+    display: inline;
+    padding: 0;
+    border: none;
+}
+#page-blocks-teaching_team-course [data-region="blocks-column"] {
+    width: 100% !important;
+}
+
+.block_teaching_team .teaching_team {
+    width: 95%;
+    float: left;
+    text-align: center;
+    max-width:100%;
+}
+
+#page-blocks-teaching_team-course .block_teaching_team .card-title {
+    font-size: 36px !important;
+    float: left !important;
+    text-align: left;
+}
+
+@media only screen and (max-width: 500px) { /*make user profile span entire column up to 500px*/
+    #page-blocks-teaching_team-course .teaching_team .user_profile {
+        width:210px;
+    }
+}
+
