Added contactusform page

--- a/templates/dropdown_values.mustache
+++ b/templates/dropdown_values.mustache
@@ -1,9 +1,10 @@
-<table id="dropdownvalues">
+<table id="dropdownvalues" class="table table-bordered">
+    <caption class="small pt-0 pb-0">The following dropdown values are available</caption>
     <thead>
         <tr>
-            <td>Sender View</td>
-            <td>Salesforce Mapping</td>
-            <td>Action</td>
+            <th scope="col">Sender View</th>
+            <th scope="col">Salesforce Mapping</th>
+            <th scope="col">Action</th>
         </tr>
     </thead>
     <tbody>
