--- a/templates/form_role_types.mustache
+++ b/templates/form_role_types.mustache
@@ -1,9 +1,10 @@
-<table id="formroletypes">
+<table id="formroletypes" class="table table-bordered">
+    <caption class="small pt-0 pb-0">Forms have been set up for the following roles</caption>
     <thead>
         <tr>
-            <td>From</td>
-            <td>Salesforce <b>Endpoint</b></td>
-            <td>Action</td>
+            <th scope="col">From</th>
+            <th scope="col">Salesforce Endpoint</th>
+            <th scope="col">Action</th>
         </tr>
     </thead>
     <tbody>
