Fixed styling issues

--- a/templates/form_role_types.mustache
+++ b/templates/form_role_types.mustache
@@ -16,7 +16,7 @@
                 <td>
                     <select name="" id="" disabled="disabled" multiple>
                         {{#senderviews}}
-                            <option value="{{id}}">{{formreason}}</option>
+                            <option value="{{id}}" style="white-space: pre-wrap;">{{formreason}}</option>
                         {{/senderviews}}
                     </select>
                 </td>
