--- a/templates/form_role_types.mustache
+++ b/templates/form_role_types.mustache
@@ -2,6 +2,7 @@
     <caption class="small pt-0 pb-0">Forms have been set up for the following roles</caption>
     <thead>
         <tr>
+            <th scope="col" class="hidden" aria-hidden="true">id</th>
             <th scope="col">From</th>
             <th scope="col">Salesforce Endpoint</th>
             <th scope="col">Sender Views</th>
@@ -11,16 +12,68 @@
     <tbody>
         {{#records}}
             <tr>
-                <td>{{name}}</td>
-                <td><a href="{{salesforceapi}}">{{salesforceapi}}</a></td>
-                <td>
-                    <select name="" id="" disabled="disabled" multiple>
-                        {{#senderviews}}
-                            <option value="{{id}}" style="white-space: pre-wrap;">{{formreason}}</option>
-                        {{/senderviews}}
-                    </select>
+                <td class="hidden" aria-hidden="true">
+                    <input type="hidden" name="id" value="{{id}}">
                 </td>
-                <td>Edit / Delete</td>
+                <td>
+                    <span>
+                        {{name}}
+                    </span>
+                    <span class="hidden">
+                        <input
+                        type="text"
+                        name="name"
+                        value="{{name}}"
+                        data-originaltext="{{name}}"
+                        >
+                    </span>
+                </td>
+                <td>
+                    <span>
+                        <a href="{{salesforceapi}}">{{salesforceapi}}</a>
+                    </span>
+                    <span class="hidden">
+                        <input
+                            type="text"
+                            name="{{salesforceapi}}"
+                            id="{{salesforceapi}}"
+                            value="{{salesforceapi}}"
+                            data-originaltext="{{salesforceapi}}"
+                        >
+                    </span>
+                </td>
+                <td>
+                    <span>
+                        <select disabled="disabled" multiple>
+                            {{#senderviews}}
+                                <option value="{{id}}" style="white-space: pre-wrap;">{{formreason}}</option>
+                            {{/senderviews}}
+                        </select>
+                    </span>
+                    <span class="hidden">
+                        <select multiple>
+                            {{#allsenderviews}}
+                                <option
+                                    value="{{id}}"
+                                    style="white-space: pre-wrap;"
+                                    {{#selected}}
+                                        selected
+                                        data-selected="true"
+                                    {{/selected}}
+                                >
+                                    {{formreason}}
+                                </option>
+                            {{/allsenderviews}}
+                        </select>
+                    </span>
+                </td>
+                <td>
+                    <span class="action edit" onclick="edit_click()">Edit</span>
+                    <span class="action save hidden" onclick="save_click()">Save</span>
+                    /
+                    <span class="action delete" onclick="delete_click()">Delete</span>
+                    <span class="action cancel hidden" onclick="cancel_click()">Cancel</span>
+                </td>
             </tr>
         {{/records}}
     </tbody>
