Updated column name

--- a/templates/form_role_types.mustache
+++ b/templates/form_role_types.mustache
@@ -4,7 +4,7 @@
         <tr>
             <th scope="col">From</th>
             <th scope="col">Salesforce Endpoint</th>
-            <th scope="col">Sender Views</th>
+            <th scope="col">Sender View Drop Down values</th>
             <th scope="col">Action</th>
         </tr>
     </thead>
