--- a/templates/form_role_types.mustache
+++ b/templates/form_role_types.mustache
@@ -20,7 +20,7 @@
                         {{name}}
                     </span>
                     <span class="hidden">
-                        <select>
+                        <select name="fromroleid">
                             {{#allroles}}
                                 <option
                                     value="{{id}}"
@@ -42,8 +42,7 @@
                     <span class="hidden">
                         <input
                             type="text"
-                            name="{{salesforceapi}}"
-                            id="{{salesforceapi}}"
+                            name="salesforceapi"
                             value="{{salesforceapi}}"
                             data-originaltext="{{salesforceapi}}"
                         >
@@ -58,7 +57,7 @@
                         </select>
                     </span>
                     <span class="hidden">
-                        <select multiple>
+                        <select multiple name="senderviewids">
                             {{#allsenderviews}}
                                 <option
                                     value="{{id}}"
@@ -76,9 +75,21 @@
                 </td>
                 <td>
                     <span class="action edit" onclick="edit_click()">Edit</span>
-                    <span class="action save hidden" onclick="save_click()">Save</span>
+                    <span
+                        class="action save hidden"
+                        onclick="save_click()"
+                        data-action="edit_from_role_type"
+                    >
+                        Save
+                    </span>
                     /
-                    <span class="action delete" onclick="delete_click()">Delete</span>
+                    <span
+                        class="action delete"
+                        onclick="delete_click()"
+                        data-action="delete_from_role_type"
+                    >
+                        Delete
+                    </span>
                     <span class="action cancel hidden" onclick="cancel_click()">Cancel</span>
                 </td>
             </tr>
