--- a/templates/contact_us.mustache
+++ b/templates/contact_us.mustache
@@ -1,7 +1,7 @@
 <div class="row">
     <h1 class="col-12">{{title}}</h1>
     <div class="col-12">
-        <form action="" enctype="multipart/form-data">
+        <form method="POST" enctype="multipart/form-data">
             <div class="form-group">
                 <label for="context" id="reasonlabel">{{reasonlabel}}</label>
                 <select
