--- a/templates/contact_us.mustache
+++ b/templates/contact_us.mustache
@@ -9,7 +9,9 @@
                     id="formreason"
                     class="form-control"
                     aria-labelledby="reasonlabel"
+                    required
                 >
+                    <option value="" disabled="disabled" selected="selected">{{# str }}  select_one_reason, block_teaching_team {{/ str }}</option>
                     {{#reasons}}
                         <option value="{{id}}">{{formreason}}</option>
                     {{/reasons}}
