--- a/templates/contact_us.mustache
+++ b/templates/contact_us.mustache
@@ -38,7 +38,7 @@
             </div>
             <div>
                 <a href="{{cancelurl}}" class="btn btn-primary float-right ml-3">Cancel</a>
-                <button type="submit" class="btn btn-primary float-right btn-sm ml-0 mb-0">Submit</button>
+                <a type="submit" class="btn btn-primary float-right btn-sm ml-0 mb-0">Submit</a>
             </div>
         </form>
     </div>
