CTED-1627 textbox should also be required.

--- a/templates/contact_us.mustache
+++ b/templates/contact_us.mustache
@@ -26,6 +26,7 @@
                     rows="10"
                     class="form-control"
                     aria-labelledby="contextlabel"
+                    required
                 ></textarea>
             </div>
             <div class="form-group">
