--- a/templates/form_role_types_single.mustache
+++ b/templates/form_role_types_single.mustache
@@ -14,6 +14,6 @@
             {{/senderviews}}
         </select>
         <button type="submit" class="btn">Submit</button>
-        <button class="cancel btn">Cancel</button>
+        <button id="role-type-cancel" class="cancel btn">Cancel</button>
     </div>
 </form>
