CTED-1658 cancel event now only binds to the correct button.

--- a/templates/form_from_dropdown_values_single.mustache
+++ b/templates/form_from_dropdown_values_single.mustache
@@ -17,6 +17,6 @@
             required
         >
         <button type="submit" class="btn">Submit</button>
-        <button class="cancel btn">Cancel</button>
+        <button id="dropdown-cancel" class="cancel btn">Cancel</button>
     </div>
 </form>
