--- a/templates/contactusform.mustache
+++ b/templates/contactusform.mustache
@@ -6,7 +6,7 @@
     <div class="col-12">
         <h2>Contact Us Form settings</h2>
         <button
-            class="btn"
+            class="btn btn-primary"
             id="addfromroletype"
             onclick="add_from_role_type()"
         >
@@ -18,7 +18,7 @@
         <h2>Dropdown Values</h2>
         {{{dropdownvalues}}}
         <button
-            class="btn"
+            class="btn btn-primary"
             id="addformdropdown"
             onclick="add_form_dropdown()"
         >
